Fixed autofill and visibility conditions to support all levels. Some other minor fixes.

--- a/src/components/common/Common.scss
+++ b/src/components/common/Common.scss
@@ -275,9 +275,6 @@ h4 {
     padding: 2px;
   }
 }
-.changelog-item {
-  color: #a3a3a3 !important;
-}
 
 .header {
   margin-bottom: 10px;
